istio/istio/virtual_services/bets-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bets-vs
spec:
  hosts:
    - bets.mesh-training.svc.cluster.local
    - bets
    - <YOUR-NAME-HERE>.sensedia.com
  gateways:
    - bets-gateway
  http:
    - match:
        - uri:
            prefix: /api/bets
      route:
        - destination:
            host: bets
            port:
              number: 9999
            subset: v1
          weight: 100
